k8s/sites/rielulinks/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-rielulinks
  namespace: web-rielulinks
spec:
  type: ClusterIP
  selector:
    app: web-rielulinks
  ports:
    - port: 80
      targetPort: 80
