k8s/sites/rielulinks/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rielulinks-ingress
  namespace: web-rielulinks
spec:
  ingressClassName: nginx
  rules:
    - host: rielulinks.uniproject.jp
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx
                port:
                  number: 80
